# TraitementImagesEtVideos

./: README.md
TIVdataProject/src/: main.cpp
tiveuxoutiveuxpas-main/: README.md
tiveuxoutiveuxpas-main/TIVdataProject/: CMakeLists.txt
